WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299819
[VideoFrame]: ~10× slower VideoFrame construction in Safari Technology Preview vs. identical WebKit CI build;
https://bugs.webkit.org/show_bug.cgi?id=299819
Summary
[VideoFrame]: ~10× slower VideoFrame construction in Safari Technology Previe...
Yury Yarashevich
Reported
2025-09-29 13:12:20 PDT
Originally reported in Slack:
https://webkit.slack.com/archives/CU5LWFM28/p1758140505177199
~10× slower VideoFrame construction (copy/format-convert from large Uint8Array) in Safari Technology Preview vs. identical WebKit CI build; differences point at runtime memory allocation/mapping behavior (different libsystem_malloc paths: mach_vm_map/mach_vm_deallocate/madvise vs. free_large/szone_free) and extra zero-fills from Accelerate.
Attachments
Add attachment
proposed patch, testcase, etc.
Yury Yarashevich
Comment 1
2025-09-29 13:14:11 PDT
Because it's impossible to enable new secure allocator predictably on local build of WebKit I want to try specilatively disable multi threading when accelerate called. I suspend it might incur more overhead than performance will especially considering significantly higher total CPU usage.
Yury Yarashevich
Comment 2
2025-09-29 13:29:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51522
EWS
Comment 3
2025-09-30 15:18:35 PDT
Committed
300781@main
(ecb227c4bef9): <
https://commits.webkit.org/300781@main
> Reviewed commits have been landed. Closing PR #51522 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2025-09-30 15:20:45 PDT
<
rdar://problem/161686736
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug