[VideoFrame] Avoid internal MT in Accelerate

https://bugs.webkit.org/show_bug.cgi?id=299819

Reviewed by Darin Adler.

VideoFrame construction in Safari shows a ~10x slowdown compared to CI builds,
seemingly due to a different allocator selected at runtime. Safari uses the
secure XZM allocator, while CI builds use the default allocator. A working
hypothesis is that because the secure allocator lazily zeroes memory on first
access, and Accelerate by default tiles the image and performs a multithreaded
copy, it introduces contention when multiple threads touch newly mapped pages
that must be zeroed. Since the secure allocator cannot be enabled predictably
for testing, a speculative fix is to disable multithreaded copy in Accelerate
by disallowing it from tiling the image via `kvImageDoNotTile`, which is
expected to eliminate contention on zeroing.

* Source/WebCore/platform/graphics/cv/VideoFrameCV.mm:
(WebCore::VideoFrame::createRGBA):
(WebCore::VideoFrame::createBGRA):

Canonical link: https://commits.webkit.org/300781@main